# api-for-fun

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
docs/: _index.md  pre-commit.md  ruff_config.md
