[project]
name = "api-for-fun"
version = "0.1.0"
description = "Creacion de una api por diversion"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.0",
    "pre-commit>=4.4.0",
    "pydantic-settings>=2.11.0",
    "ujson>=5.11.0",
]
